attached_assets/Pasted-Module-build-failed-from-node-modules-babel-loader-lib-index-js-SyntaxError-home-runner-works-1748818996107.txt
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/workspace/src/utils/VoiceInputManager.js: `VoiceInputManager` has already been exported. Exported identifiers must be unique. (73:9)

[0m [90m 71 |[39m }
 [90m 72 |[39m
[31m[1m>[22m[39m[90m 73 |[39m [36mexport[39m { [33mVoiceInputManager[39m }[33m;[39m
 [90m    |[39m          [31m[1m^[22m[39m
 [90m 74 |[39m [36mexport[39m [36mdefault[39m [33mVoiceInputManager[39m[33m;[39m[0m
    at constructor (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:360:19)
    at FlowParserMixin.raise (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6613:19)
    at FlowParserMixin.checkDuplicateExports (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13948:14)
    at FlowParserMixin.checkExport (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13890:16)
    at FlowParserMixin.parseExport (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13688:12)
    at FlowParserMixin.parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12754:27)
    at FlowParserMixin.parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12644:17)
    at FlowParserMixin.parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:2922:24)
    at FlowParserMixin.parseModuleItem (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12621:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13192:36)
    at FlowParserMixin.parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13185:10)
    at FlowParserMixin.parseProgram (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12514:10)
    at FlowParserMixin.parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12504:25)
    at FlowParserMixin.parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:3691:28)
    at FlowParserMixin.parse (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:14364:10)
    at parse (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:14398:38)
    at parser (/home/runner/workspace/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next ()
    at normalizeFile (/home/runner/workspace/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next ()
    at run (/home/runner/workspace/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next ()
    at transform (/home/runner/workspace/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next ()
    at step (/home/runner/workspace/node_modules/gensync/index.js:261:32)
    at /home/runner/workspace/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/home/runner/workspace/node_modules/gensync/index.js:223:11)